# Derivatives-Trading-Dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dashboard/data/: equity.py  fx.py  historical.py  rates.py
src/dashboard/game/: engine.py
src/dashboard/models/: equity.py  fx.py  greeks.py  rates.py
src/dashboard/portfolio/: builder.py  hedger.py
src/dashboard/simulation/: engine.py
src/dashboard/ui/: app.py  game_view.py  hedge_view.py  portfolio_view.py  risk_selector.py  simulation_view.py
tests/: test_core.py
