[project]
name = "derivatives-dashboard"
version = "0.1.0"
description = "Interactive derivatives risk intuition dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.45.1",
    "yfinance>=1.4",
    "QuantLib==1.36",
    "fredapi==0.5.2",
    "pysabr==0.4.0",
    "numpy==2.2.1",
    "scipy==1.15.2",
    "pandas==2.2.3",
    "cvxpy==1.6.5",
    "plotly==6.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
